Basic faction team constructor started and working.

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<div class="game-board"></div>
+	
+<div class="team-constructor"></div>
 
 
 
-
+<!-- <div class="game-board"></div> --> <!-- Append this with a function that will also erase team constructor. -->
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js" type="text/javascript"></script>
 <script src="js/app.js" type="text/javascript"></script>
