--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 
 
-<!-- <div class="game-board"></div> --> <!-- Append this with a function that will also erase team constructor. -->
+<div class="game-board"></div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js" type="text/javascript"></script>
 <script src="js/app.js" type="text/javascript"></script>
