--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
 	<title>Valkenkrig: Ragnarok</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Cinzel" rel="stylesheet">
 </head>
 <body>
 
-
-
+<div class="currentFactionTurn"></div>
+<div class="selectedUnit"></div>
+<div class="targetedUnit"></div>
 <div class="game-board"></div>
+<div class="alerts"></div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js" type="text/javascript"></script>
 <script src="js/app.js" type="text/javascript"></script>
